--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,8 +5,8 @@
 	<title>Title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<link rel="stylesheet" href="resource/css/reset.css?v=f3bcd8dd2e">
-	<link rel="stylesheet" href="resource/css/index.css?v=a67c928fbd">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <div id="test">
@@ -18,7 +18,7 @@
 		<span class="num"></span>
 	</div>
 </div>
-<script src="resource/lib/js/jquery.min.js?v=41175d1d95"></script>
-<script src="resource/js/index.js?v=cbc6072dfb"></script>
+<script src="lib/js/jquery.min.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
